--- a/src/stellar-pointer.web-app/src/app/app.component.scss
+++ b/src/stellar-pointer.web-app/src/app/app.component.scss
@@ -1,13 +1,31 @@
-.planets-background {
-  height: 30vh;
-  width: 100vw;
-  background-image: url("../assets/planets.jpg");
-  background-size: cover;
+.mat-card {
+  box-shadow: 0px 0px 35px 17px rgba(255,255,255,0.35);
+  border-radius: 8px;
 }
 
-.sketch-planets-background {
-  height: 70vh;
-  width: 100vw;
-  background-image: url("../assets/sketch-planets.png");
-  background-size: cover;
+.stellar-objects-wrapper {
+  position: relative;
+
+  .planets-background {
+    height: 100vh;
+    width: 100vw;
+    background-image: url("../assets/planets.jpg");
+    background-size: cover;
+  }
+
+  .stellar-objects-container {
+    height: 80vh;
+    width: 30vw;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+    overflow: auto;
+  }
 }
