--- a/src/stellar-pointer.web-app/src/styles.scss
+++ b/src/stellar-pointer.web-app/src/styles.scss
@@ -1,5 +1,24 @@
-html, body {
+html,
+body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+}
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #cccccc;
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #707070;
+  border-radius: 8px;
 }
