Moved Web API from ASP dotnet framework to dotnet core.
Added configuration setup for Web App.
Created script that run and stop the Web API and App.

--- a/src/stellar-pointer.web-app/src/app/planet/stellar-object.component.scss
+++ b/src/stellar-pointer.web-app/src/app/planet/stellar-object.component.scss
@@ -1,5 +1,7 @@
 .stellar-object-container {
   display: flex;
+  flex-direction: row;
+  column-gap: 16px;
   align-items: center;
   cursor: pointer;
 
