--- a/src/stellar-pointer.web-app/src/app/app.component.scss
+++ b/src/stellar-pointer.web-app/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .mat-card {
-  box-shadow: 0px 0px 35px 17px rgba(255,255,255,0.35);
+  box-shadow: 0px 0px 35px 17px rgba(255, 255, 255, 0.35);
   border-radius: 8px;
+  margin: auto !important;
 }
 
 .stellar-objects-wrapper {
@@ -25,7 +26,23 @@
 
     display: flex;
     flex-direction: column;
-    row-gap: 32px;
+    row-gap: 24px;
     overflow: auto;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .stellar-objects-wrapper {
+    .stellar-objects-container {
+      width: 70vw;
+    }
+  }
+}
+
+@-moz-document url-prefix() {
+  sp-stellar-object:last-child {
+    .stellar-object-container {
+      margin-bottom: 16px;
+    }
   }
 }
