--- a/src/stellar-pointer.web-app/src/styles.scss
+++ b/src/stellar-pointer.web-app/src/styles.scss
@@ -3,6 +3,9 @@ body {
   height: 100vh;
   width: 100vw;
   margin: 0;
+
+  scrollbar-color: #cccccc #707070;
+  scrollbar-width: thin;
 }
 
 body {
@@ -10,7 +13,8 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  height: 11px;
+  width: 11px;
 }
 
 ::-webkit-scrollbar-track {
