Added navigation bar.
Updated packages to latest versions.

--- a/src/stellar-pointer.web-app/src/app/app.component.scss
+++ b/src/stellar-pointer.web-app/src/app/app.component.scss
@@ -29,6 +29,13 @@
     row-gap: 24px;
     overflow: auto;
   }
+  
+  .toolbar {
+    position: absolute;
+    display: flex;
+    column-gap: 16px;
+    justify-content: center;
+  }
 }
 
 @media only screen and (max-width: 720px) {
