--- a/src/stellar-pointer.web-app/src/app/app.component.html
+++ b/src/stellar-pointer.web-app/src/app/app.component.html
@@ -1,7 +1,13 @@
 <div class="stellar-objects-wrapper">
-    <div class="planets-background"></div>
+    <mat-toolbar class="toolbar">
+        <button mat-button>Register</button>
+        <button mat-button>Login</button>
+        <button mat-button>Add favorite</button>
+        <button mat-button>Visible</button>
+    </mat-toolbar>
     <mat-card class="stellar-objects-container mat-elevation-z8">
         <sp-stellar-object *ngFor="let stellarObject of stellarObjects" [stellarObject]="stellarObject">
         </sp-stellar-object>
     </mat-card>
+    <div class="planets-background"></div>
 </div>
