Used first COM port available instead of a hardcoded one.
Parially added SignalR for the web-project.
Updated npm packages.

--- a/src/stellar-pointer.web-app/src/app/app.component.html
+++ b/src/stellar-pointer.web-app/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="stellar-objects-wrapper">
-    <mat-toolbar class="toolbar">
+    <!-- <mat-toolbar class="toolbar">
         <button mat-button>Register</button>
         <button mat-button>Login</button>
         <button mat-button>Add favorite</button>
         <button mat-button>Visible</button>
-    </mat-toolbar>
+    </mat-toolbar> -->
     <mat-card class="stellar-objects-container mat-elevation-z8">
         <sp-stellar-object *ngFor="let stellarObject of stellarObjects" [stellarObject]="stellarObject">
         </sp-stellar-object>
