--- a/src/stellar-pointer.web-app/src/app/app.component.scss
+++ b/src/stellar-pointer.web-app/src/app/app.component.scss
@@ -15,14 +15,16 @@
   }
 
   .stellar-objects-container {
-    height: 80vh;
+    max-height: 80vh;
     width: 30vw;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 
     display: flex;
     flex-direction: column;
